ajout des canevas, entre autres

--- a/1M/1M-exercicesS1-P1.tex
+++ b/1M/1M-exercicesS1-P1.tex
@@ -169,141 +169,142 @@
 \insertexo{fata}{true}{exo}
 \insertexo{abv3}{true}{exo}
 \insertexo{pvqa}{true}{exo}
-\newpage
-\section{Réponses}
-\subsection{Calcul numérique}
-
-%\insertexo{6z4t2}{true}{cor}
-%\insertexo{1mcjb}{true}{cor}
-%\subsubsection{Nombres premiers}
-%\insertexo{fttde}{true}{cor}
-%\insertexo{b23hy}{true}{cor}
-%\insertexo{11mx3}{true}{cor}
-%\insertexo{4sun4}{true}{cor}
-\subsubsection{Division euclidienne}
-\insertexo{t3fxd}{true}{cor}
-\insertexo{wv9bq}{true}{cor}
-\insertexo{cc78t}{true}{cor}
-\insertexo{vrjk9}{true}{cor}
-\insertexo{nwgzm}{true}{cor}
-
-\subsubsection{Nombres rationnels}
-\insertexo{vssbc}{true}{cor}
-%\insertexo{jhavr}{true}{cor}
-\insertexo{xgk9e}{true}{cor}
-\subsubsection{Racines}
-\insertexo{hv2ug}{true}{cor}
-\insertexo{ksh26}{true}{cor}
-\insertexo{9f4t8}{true}{cor}
-\insertexo{f3sg7}{true}{cor}
-\insertexo{rp8cc}{true}{cor}
-\subsection{Ensembles et intervalles}
-\subsubsection{Ensembles de nombres}
-\insertexo{cbh7d}{true}{cor}
-\insertexo{w1wsu}{true}{cor}
-\insertexo{nj317}{true}{cor}
-\insertexo{j1x1v}{true}{cor}
-\insertexo{hggjf}{true}{cor}
-%\insertexo{yrfjs}{true}{cor}
-\subsubsection{Ensembles quelconques}
-\insertexo{9bnc9}{true}{cor}
-\insertexo{k8f2j}{true}{cor}
-\insertexo{tr635}{true}{cor}
-\insertexo{krq84}{true}{cor}
-\insertexo{ew4z2}{true}{cor}
-\insertexo{rm8qy}{true}{cor}
-\insertexo{zm8w4}{true}{cor}
-\insertexo{s2efz}{true}{cor}
-\insertexo{d5xp3}{true}{cor}
-\subsubsection{Intervalles réelles}
-\insertexo{6ugwm}{true}{cor}
-\insertexo{v2rv8}{true}{cor}
-\insertexo{p2cxv}{true}{cor}
-\insertexo{p6w7q}{true}{cor}
-\insertexo{czc9e}{true}{cor}
-\insertexo{nw439}{true}{cor}
-\insertexo{61ve6}{true}{cor}
-\insertexo{fq51r}{true}{cor}
-\insertexo{ht3h6}{true}{cor}
-\insertexo{u14s6}{true}{cor}
-\insertexo{9k125}{true}{cor}
-\insertexo{mrvd7}{true}{cor}
-\insertexo{drcdb}{true}{cor}
-\subsection{Calul littéral}
-\subsubsection{Traduire un énoncé}
-\insertexo{3qa3k}{true}{cor}
-\insertexo{a3tr3}{true}{cor}
-\subsubsection{Isoler une variable}
-\insertexo{kdgn}{true}{cor}
-\insertexo{n66ke}{true}{cor}
-\insertexo{2yzxt}{true}{cor}
-
-\subsubsection{L'algèbre comme outil de preuve}
-\insertexo{sxya4}{true}{cor}
-\insertexo{wanr}{true}{cor}
-\insertexo{jxa81}{true}{cor}
-\insertexo{u38hd}{true}{cor}
-\insertexo{5xg9e}{true}{cor}
-\insertexo{rdpye}{true}{cor}
-\subsubsection{Développer et réduire}
-\insertexo{9e72h}{true}{cor}
-\insertexo{jw3r4}{true}{cor}
-\insertexo{1e54x}{true}{cor}
-\insertexo{v4dqz}{true}{cor}
-\insertexo{n86nn}{true}{cor}
-\insertexo{akwq5}{true}{cor}
-\insertexo{sj5q7}{true}{cor}
-\insertexo{gw913}{true}{cor}
-\insertexo{n9d51}{true}{cor}
-\insertexo{nrg23}{true}{cor}
-\insertexo{1kye7}{true}{cor}
-
-\subsubsection{Identités remarquables}
-\insertexo{xabyp}{true}{cor}
-\insertexo{tm6je}{true}{cor}
-\insertexo{3ytn7}{true}{cor}
-\insertexo{guy1v}{true}{cor}
-
-\insertexo{3at1e}{true}{cor}
-\insertexo{akeku}{true}{cor}
-
-
-\insertexo{sqsur}{true}{cor}
-%\insertexo{qkz3z}{true}{cor}
-\insertexo{6edd2}{true}{cor}
-\insertexo{37srd}{true}{cor}
-\subsubsection{Factorisation}
-\insertexo{g6h1q}{true}{cor}
-\insertexo{pq3wr}{true}{cor}
-\insertexo{q5m9j}{true}{cor}
-\insertexo{6cmvd}{true}{cor}
-\insertexo{s6f6t}{true}{cor}
-\insertexo{4kec2}{true}{cor}
-\insertexo{z34z9}{true}{cor}
-\insertexo{64mtt}{true}{cor}
-\insertexo{kywsv}{true}{cor}
-\insertexo{nc4wd}{true}{cor}
-\insertexo{ctbb}{true}{cor}
-\insertexo{x9jw}{true}{cor}
-\insertexo{uae9m}{true}{cor}
-\insertexo{64qwf}{true}{cor}
-\insertexo{rwcyq}{true}{cor}
-\insertexo{82fkx}{true}{cor}
-
-\subsection{Équations}
-\insertexo{5pcp}{true}{cor}
-\subsubsection{Équations du premier degré}
-{\bfseries Résolution d'équations}
-\insertexo{qa6b}{true}{cor}
-\insertexo{bvvy}{true}{cor}
-\insertexo{rhvj}{true}{cor}
-\insertexo{ehjb}{true}{cor}
-{\bfseries Résolution de problèmes}
-\insertexo{q8vx}{true}{cor}
-\insertexo{prpq}{true}{cor}
-\insertexo{ae7n}{true}{cor}
-\insertexo{fata}{true}{cor}
-\insertexo{abv3}{true}{cor}
-\insertexo{pvqa}{true}{cor}
+%
+%\newpage
+%\section{Réponses}
+%\subsection{Calcul numérique}
+%
+%%\insertexo{6z4t2}{true}{cor}
+%%\insertexo{1mcjb}{true}{cor}
+%%\subsubsection{Nombres premiers}
+%%\insertexo{fttde}{true}{cor}
+%%\insertexo{b23hy}{true}{cor}
+%%\insertexo{11mx3}{true}{cor}
+%%\insertexo{4sun4}{true}{cor}
+%\subsubsection{Division euclidienne}
+%\insertexo{t3fxd}{true}{cor}
+%\insertexo{wv9bq}{true}{cor}
+%\insertexo{cc78t}{true}{cor}
+%\insertexo{vrjk9}{true}{cor}
+%\insertexo{nwgzm}{true}{cor}
+%
+%\subsubsection{Nombres rationnels}
+%\insertexo{vssbc}{true}{cor}
+%%\insertexo{jhavr}{true}{cor}
+%\insertexo{xgk9e}{true}{cor}
+%\subsubsection{Racines}
+%\insertexo{hv2ug}{true}{cor}
+%\insertexo{ksh26}{true}{cor}
+%\insertexo{9f4t8}{true}{cor}
+%\insertexo{f3sg7}{true}{cor}
+%\insertexo{rp8cc}{true}{cor}
+%\subsection{Ensembles et intervalles}
+%\subsubsection{Ensembles de nombres}
+%\insertexo{cbh7d}{true}{cor}
+%\insertexo{w1wsu}{true}{cor}
+%\insertexo{nj317}{true}{cor}
+%\insertexo{j1x1v}{true}{cor}
+%\insertexo{hggjf}{true}{cor}
+%%\insertexo{yrfjs}{true}{cor}
+%\subsubsection{Ensembles quelconques}
+%\insertexo{9bnc9}{true}{cor}
+%\insertexo{k8f2j}{true}{cor}
+%\insertexo{tr635}{true}{cor}
+%\insertexo{krq84}{true}{cor}
+%\insertexo{ew4z2}{true}{cor}
+%\insertexo{rm8qy}{true}{cor}
+%\insertexo{zm8w4}{true}{cor}
+%\insertexo{s2efz}{true}{cor}
+%\insertexo{d5xp3}{true}{cor}
+%\subsubsection{Intervalles réelles}
+%\insertexo{6ugwm}{true}{cor}
+%\insertexo{v2rv8}{true}{cor}
+%\insertexo{p2cxv}{true}{cor}
+%\insertexo{p6w7q}{true}{cor}
+%\insertexo{czc9e}{true}{cor}
+%\insertexo{nw439}{true}{cor}
+%\insertexo{61ve6}{true}{cor}
+%\insertexo{fq51r}{true}{cor}
+%\insertexo{ht3h6}{true}{cor}
+%\insertexo{u14s6}{true}{cor}
+%\insertexo{9k125}{true}{cor}
+%\insertexo{mrvd7}{true}{cor}
+%\insertexo{drcdb}{true}{cor}
+%\subsection{Calul littéral}
+%\subsubsection{Traduire un énoncé}
+%\insertexo{3qa3k}{true}{cor}
+%\insertexo{a3tr3}{true}{cor}
+%\subsubsection{Isoler une variable}
+%\insertexo{kdgn}{true}{cor}
+%\insertexo{n66ke}{true}{cor}
+%\insertexo{2yzxt}{true}{cor}
+%
+%\subsubsection{L'algèbre comme outil de preuve}
+%\insertexo{sxya4}{true}{cor}
+%\insertexo{wanr}{true}{cor}
+%\insertexo{jxa81}{true}{cor}
+%\insertexo{u38hd}{true}{cor}
+%\insertexo{5xg9e}{true}{cor}
+%\insertexo{rdpye}{true}{cor}
+%\subsubsection{Développer et réduire}
+%\insertexo{9e72h}{true}{cor}
+%\insertexo{jw3r4}{true}{cor}
+%\insertexo{1e54x}{true}{cor}
+%\insertexo{v4dqz}{true}{cor}
+%\insertexo{n86nn}{true}{cor}
+%\insertexo{akwq5}{true}{cor}
+%\insertexo{sj5q7}{true}{cor}
+%\insertexo{gw913}{true}{cor}
+%\insertexo{n9d51}{true}{cor}
+%\insertexo{nrg23}{true}{cor}
+%\insertexo{1kye7}{true}{cor}
+%
+%\subsubsection{Identités remarquables}
+%\insertexo{xabyp}{true}{cor}
+%\insertexo{tm6je}{true}{cor}
+%\insertexo{3ytn7}{true}{cor}
+%\insertexo{guy1v}{true}{cor}
+%
+%\insertexo{3at1e}{true}{cor}
+%\insertexo{akeku}{true}{cor}
+%
+%
+%\insertexo{sqsur}{true}{cor}
+%%\insertexo{qkz3z}{true}{cor}
+%\insertexo{6edd2}{true}{cor}
+%\insertexo{37srd}{true}{cor}
+%\subsubsection{Factorisation}
+%\insertexo{g6h1q}{true}{cor}
+%\insertexo{pq3wr}{true}{cor}
+%\insertexo{q5m9j}{true}{cor}
+%\insertexo{6cmvd}{true}{cor}
+%\insertexo{s6f6t}{true}{cor}
+%\insertexo{4kec2}{true}{cor}
+%\insertexo{z34z9}{true}{cor}
+%\insertexo{64mtt}{true}{cor}
+%\insertexo{kywsv}{true}{cor}
+%\insertexo{nc4wd}{true}{cor}
+%\insertexo{ctbb}{true}{cor}
+%\insertexo{x9jw}{true}{cor}
+%\insertexo{uae9m}{true}{cor}
+%\insertexo{64qwf}{true}{cor}
+%\insertexo{rwcyq}{true}{cor}
+%\insertexo{82fkx}{true}{cor}
+%
+%\subsection{Équations}
+%\insertexo{5pcp}{true}{cor}
+%\subsubsection{Équations du premier degré}
+%{\bfseries Résolution d'équations}
+%\insertexo{qa6b}{true}{cor}
+%\insertexo{bvvy}{true}{cor}
+%\insertexo{rhvj}{true}{cor}
+%\insertexo{ehjb}{true}{cor}
+%{\bfseries Résolution de problèmes}
+%\insertexo{q8vx}{true}{cor}
+%\insertexo{prpq}{true}{cor}
+%\insertexo{ae7n}{true}{cor}
+%\insertexo{fata}{true}{cor}
+%\insertexo{abv3}{true}{cor}
+%\insertexo{pvqa}{true}{cor}
 
 \end{document}
