--- a/src_exos/pe1ew.tex
+++ b/src_exos/pe1ew.tex
@@ -13,19 +13,23 @@
 Déterminer, dans chacun des cas suivants, l'expression algébrique d'une fonction rationnelle avec une asymptote :
 
 \begin{tasks}(1)
+\task oblique d'équation $y = 3x - 5$
 \task horizontale d'équation $y = -2$
 \task verticale d'équation $x = 7$.
 \task horizontale d'équation $y = 0$, deux verticales d'équations $x = 3$ et $x = -10$.
+\task Une asymptote verticale d'équation $x = 5$ et une asymptote oblique d'équation $y = 2x + 5$
 \end{tasks}
 Justifier vos réponses en montrant que les conditions sont bien vérifiées. 
 }
 \correction{
 	\tcblower
-	Sans justification, par exemple~:
+	Sans justification.
 \begin{tasks}(3)
+	\task $f(x)=\dfrac{3x^3-5x^2+1}{x^2}$ 
 	\task $f(x)=\dfrac{-2x^2+1}{x^2}$
 	\task $f(x)=\dfrac{x}{x-7}$
 	\task $f(x)=\dfrac{x}{(x-3)(x+10)}$
+	\task $f(x)=\dfrac{2x^2-5x+1}{x-5}$
 \end{tasks}
 }
 
