--- a/3M/3M-limites.tex
+++ b/3M/3M-limites.tex
@@ -41,6 +41,8 @@
 \end{center}
 \vspace{-1cm}
 \tableofcontents
+
+{\tiny Version du \today}
 \newpage
 \section*{Prérequis}
 Avant de commencer ce chapitre, je m'assure d'être capable de 
@@ -1116,6 +1118,7 @@ ou plus directement :
 \end{tasks}
 \end{exemple}
 \begin{exemplesuite}
+\tcblower
 	\begin{tasks}
 		\task[c)]
 \[
@@ -1136,7 +1139,6 @@ ou plus directement :
 \]
 \end{tasks}
 \end{exemplesuite}
-
 \begin{thm}
 	(sans démonstration)
 	\tcblower
@@ -1169,6 +1171,7 @@ ou plus directement :
 (avec démonstration)
 	\tcblower 
 	La fonction $x\sin\left(\dfrac{1}{x}\right)$ est continue en $x=0$
+
 	\begin{proof}
 Voir les exercices. 
 	\end{proof}
