--- a/packages/coursCollege.sty
+++ b/packages/coursCollege.sty
@@ -4,6 +4,7 @@
 \RequirePackage{ragged2e}  % For text alignment
 \RequirePackage{hyperref}  % For clickable references
 \RequirePackage{etoolbox}
+\usepackage[french]{babel}
 \RequirePackage[french=quotes]{csquotes}
 \setquotestyle{french}
 \RequirePackage{amsmath}
