debut travail calc diff

--- a/3M/3M-limites.tex
+++ b/3M/3M-limites.tex
@@ -42,7 +42,7 @@
 \vspace{-1cm}
 \tableofcontents
 
-{\tiny Version du \today}
+{\footnotesize Version du \today}
 \newpage
 \section*{Prérequis}
 Avant de commencer ce chapitre, je m'assure d'être capable de 
@@ -1170,7 +1170,8 @@ ou plus directement :
 \begin{coro}
 (avec démonstration)
 	\tcblower 
-	La fonction $x\sin\left(\dfrac{1}{x}\right)$ est continue en $x=0$
+	La fonction $f(x)=\begin{cases}x\sin\left(\dfrac{1}{x}\right),& x\neq 0\\
+	0, &x=0\end{cases}$ est continue.
 
 	\begin{proof}
 Voir les exercices. 
@@ -2252,34 +2253,34 @@ Représenter graphiquement une (unique) fonction $f$ de votre choix qui vérifie
 Dans les corrigés vous trouverez seulement des éléments de réponses. {\bfseries Une réponse détaillée et justifiée} à l'aide des résultats du cours est attendue. L'enseignant est là pour valider votre réponse et vérifier votre rédaction. {\bfseries En évaluation, une réponse qui n'est pas justifiée selon les attentes ne recueillera pas de point.} 
 
 \subsection{Continuité}
-\insertexo{1n93r}{false}{exo}
-\insertexo{59swy}{false}{exo}
-\insertexo{qp2mw}{false}{exo}
-\insertexo{6csvs}{false}{exo}
+\insertexo{1n93r}{false}{both}
+\insertexo{59swy}{false}{both}
+\insertexo{qp2mw}{false}{both}
+\insertexo{6csvs}{false}{both}
 \subsection{Limites en un nombre}
-\insertexo{4dptb}{false}{exo}
-\insertexo[exo:p1f]{g4gbb}{false}{exo}
-\insertexo{n9sxp}{false}{exo}
-\insertexo[exo:p2d]{tecfn}{false}{exo}
-\insertexo{wnd21}{false}{exo}
-\insertexo{3vr28}{false}{exo}
-\insertexo{c3uc9}{false}{exo}
-\insertexo{1bqh9}{false}{exo}
-\insertexo{myjcq}{false}{exo}
-\insertexo{dpjwk}{false}{exo}
-\insertexo{97ryj}{false}{exo}
-\insertexo{n1axs}{false}{exo}
+\insertexo{4dptb}{false}{both}
+\insertexo[exo:p1f]{g4gbb}{false}{both}
+\insertexo{n9sxp}{false}{both}
+\insertexo[exo:p2d]{tecfn}{false}{both}
+\insertexo{wnd21}{false}{both}
+\insertexo{3vr28}{false}{both}
+\insertexo{c3uc9}{false}{both}
+\insertexo{1bqh9}{false}{both}
+\insertexo{myjcq}{false}{both}
+\insertexo{dpjwk}{false}{both}
+\insertexo{97ryj}{false}{both}
+\insertexo{n1axs}{false}{both}
 
-\insertexo{gb3ag}{false}{exo}
-\insertexo{5911p}{false}{exo}
+\insertexo{gb3ag}{false}{both}
+\insertexo{5911p}{false}{both}
 
-\insertexo{hsytn}{false}{exo}
+\insertexo{hsytn}{false}{both}
 \subsubsection{Indétermination du type « $\dfrac{0}{0}$ » et « $\dfrac{1}{0}$ » }
 
-\insertexo[exo:p1d]{vyj67}{false}{exo}
-\insertexo{ac9v2}{false}{exo}
-\insertexo{98752}{false}{exo}
-\insertexo{gg7hk}{false}{exo}
+\insertexo[exo:p1d]{vyj67}{false}{both}
+\insertexo{ac9v2}{false}{both}
+\insertexo{98752}{false}{both}
+\insertexo{gg7hk}{false}{both}
 \insertexo{f7dft}{false}{exo}
 \insertexo{u44h9}{false}{exo}
 \insertexo{pp62m}{false}{exo}
