--- a/src_exos/ew4z2.tex
+++ b/src_exos/ew4z2.tex
@@ -44,7 +44,7 @@ Dans l'ensemble $T$ des triangles, on considère $I$, le sous-ensemble des trian
 \end{center}
 \task 
 \begin{itemize}
-	\item $I\cap E=E$, car l'ensemble des triangles \\ équilatéraux est contenu dans l'ensemble de triangles isocèles. 
+	\item $I\cap E=I$, car l'ensemble des triangles \\ équilatéraux est contenu dans l'ensemble de triangles isocèles. 
 	\item $R\cap E=\emptyset$, car il n'existe aucun triangle qui est équilatéral et rectangle (par le théorème de Pythagore, si $a\in \R^*_+$ est la longueur du côté du triangle, alors $a^2+a^2\neq a^2$).
 	\item $I\cap R$ est l'ensemble des triangles dont les deux cathètes mesure $a\in \R^*_+$ et l'hypoténuse mesure $a\sqrt{2}$ (par Pythagore).
 \end{itemize}
